# math

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  access.hpp  analysis.hpp  bezier.cpp  bezier.hpp  clamp.hpp  constants.hpp  convolution.hpp  crossCorrelation.hpp  ease.hpp  install  interleave.hpp  interpolation.hpp  linear.hpp  linear_regression.hpp  max.hpp  normalize.hpp  power_of_2.hpp  random.hpp  sigmoid.hpp  sinusoid.hpp  spline.hpp  statistics.hpp  utility.hpp  wrap.hpp
geometry/: bin_packing_space.hpp  circular.hpp  containment.hpp  expansion.hpp  intersection.hpp  rectangular.hpp  reduction.hpp  size.hpp  triangular.hpp
linear/: absolute.hpp  cross.hpp  determinant.hpp  diagonal.hpp  dot.hpp  exp.hpp  fmod.hpp  inverse.hpp  length.hpp  log.hpp  matrix.hpp  max.hpp  modulo.hpp  normalize.hpp  power.hpp  random.hpp  rotate.hpp  scale.hpp  trace.hpp  translate.hpp  transpose.hpp  vector.hpp
test/: CMakeLists.txt  access.cpp  interleave.cpp  interpolation.cpp  main.cpp  normalize.cpp  sigmoid.cpp
